--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ Unity/
 frontend/node_modules
 frontend/__pycache__
 frontend/tests/__pycache__
+frontend/.coverage
+frontend/.pytest_cache
+frontend/coverage
